--- a/src/public/dashboard.html
+++ b/src/public/dashboard.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Banners :: PDL</title>
+        <title>Codlinx - Dashboard</title>
 
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -28,11 +28,6 @@
         />
 
         <script
-            src="https://code.jquery.com/jquery-3.6.1.min.js"
-            integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
-            crossorigin="anonymous"
-        ></script>
-        <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
             integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
             crossorigin="anonymous"
@@ -42,322 +37,66 @@
     <body>
         <nav class="navbar bg-light">
             <div class="container">
-                <a class="navbar-brand" href="">
-                    <img
-                        src="./assets/img/logo_cabecalho.png"
-                        alt="Banners :: PDL"
-                        width="60"
-                        height="48"
-                    />
+                <a class="navbar-brand" href="/dashboard">
+                    <img src="./assets/img/logo_cabecalho.png" alt="Codlinx" width="40" height="40" />
                 </a>
             </div>
         </nav>
 
-        <br />
-
-        <div class="container" id="dashboard">
-            <button class="btn btn-primary" v-on:click="handlerAdd">
-                <i class="fa-solid fa-plus"></i> <span>Adicionar banner</span>
-            </button>
-
-            <hr />
-
-            <h4>Ativos</h4>
-            <div
-                class="row mt-2 d-flex justify-content-center"
-                style="gap: 20px"
-            >
-                <div
-                    class="col-lg-3 border rounded p-2 d-flex"
-                    v-for="banner of active_banners"
-                >
-                    <img
-                        :src="banner.ARQUIVO"
-                        alt=""
-                        class="img-fluid mx-auto"
-                        width="500"
-                        height="145"
-                    />
-                </div>
+        <div class="container p-4" id="dashboard">
+            <div class="col">
+                <a href="/clients" class="btn btn-dark btn-sm my-2">Clientes</a>
+                <a href="/projects" class="btn btn-dark btn-sm my-2">Projetos</a>
+                <a href="/service_orders" class="btn btn-dark btn-sm my-2">Os</a>
             </div>
 
             <hr />
 
-            <h4>Todos</h4>
-
-            <div
-                class="row mt-2 d-flex justify-content-center"
-                style="gap: 10px"
-            >
-                <div
-                    class="col-lg-3 border rounded p-2"
-                    v-for="banner of banners"
-                    :key="banner.COD_BANNER"
-                >
-                    <div class="">
-                        <div class="d-flex justify-content-between">
-                            <div>
-                                <small class="text-secondary">
-                                    #{{banner.COD_BANNER}} &bull;
-                                    {{banner.SEQ_BANNER}}º
-                                    <span
-                                        v-if="banner.TPO_BANNER == 0"
-                                        title="Destaque"
-                                    >
-                                        &bull; <i class="fa-solid fa-star"></i
-                                    ></span>
-                                    <span
-                                        v-if="banner.STS_BANNER == 1"
-                                        title="Ativo"
-                                    >
-                                        &bull; <i class="fa-solid fa-eye"></i
-                                    ></span>
-                                    <span
-                                        v-if="banner.STS_BANNER == 0"
-                                        title="Inativo"
-                                    >
-                                        &bull;
-                                        <i class="fa-solid fa-eye-slash"></i
-                                    ></span>
-                                </small>
-                            </div>
-                            <div>
-                                <button
-                                    class="btn btn-sm btn-primary"
-                                    v-on:click="handlerOrderUp(banner)"
-                                    title="Lembre-se: Data final tem prioridade em relação a ordem."
-                                >
-                                    <i class="fa-solid fa-arrow-left"></i>
-                                </button>
-                                <button
-                                    class="btn btn-sm btn-primary"
-                                    v-on:click="handlerOrderDown(banner)"
-                                    title="Lembre-se: Data final tem prioridade em relação a ordem."
-                                >
-                                    <i class="fa-solid fa-arrow-right"></i>
-                                </button>
-                                <button
-                                    class="btn btn-sm btn-primary"
-                                    v-on:click="handlerEdit(banner)"
-                                >
-                                    <i class="fa-solid fa-pen"></i>
-                                </button>
-                                <button
-                                    class="btn btn-sm btn-danger"
-                                    v-on:click="handlerDelete(banner.COD_BANNER)"
-                                >
-                                    <i class="fa-solid fa-trash"></i>
-                                </button>
-                            </div>
-                        </div>
-
-                        <hr />
-
-                        <div class="d-flex">
-                            <img
-                                :src="banner.ARQUIVO"
-                                alt=""
-                                class="img-fluid mx-auto"
-                                width="333"
-                                height="96"
-                            />
-                        </div>
-
-                        <div class="row p-2" style="gap: 5px">
-                            <div class="col-sm border" v-if="banner.COD_LEILAO">
-                                <small>Leilão: {{banner.COD_LEILAO}}</small>
-                            </div>
-                            <div class="col-sm border" v-if="banner.COD_GRUPO">
-                                <small>Grupo: {{banner.COD_GRUPO}}</small>
-                            </div>
-                            <div class="col-sm border" v-if="banner.COD_LOTE">
-                                <small>Lote: {{banner.COD_LOTE}}</small>
-                            </div>
-                            <div
-                                class="col-sm border"
-                                v-if="banner?.USUARIO?.DSC_LOGIN_USUARIO"
-                            >
-                                <small
-                                    >Usuário:
-                                    {{banner.USUARIO.DSC_LOGIN_USUARIO}}</small
-                                >
-                            </div>
-                        </div>
-
-                        <ul>
-                            <li>Inicio: {{banner.DAT_INICIO.split('T')[0]}}</li>
-                            <li>
-                                Fim: {{banner.DAT_FIM.startsWith('3999') ?
-                                'Indeterminado' : banner.DAT_FIM.split('T')[0]}}
-                            </li>
-                        </ul>
+            <div class="row" style="gap: 10px">
+                <div class="col border rounded p-2">
+                    <h5>Os - Em aberto</h5>
+                    <div class="table-responsive">
+                        <table class="table table-striped border">
+                            <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">Assunto</th>
+                                    <th scope="col">Status</th>
+                                    <th scope="col"></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr v-for="service_order of service_orders">
+                                    <th scope="row">{{service_order.id}}</th>
+                                    <td>{{service_order.subject}}</td>
+                                    <td>{{service_order.status}}</td>
+                                    <td><a :href="'/service_orders/i?id='+service_order.id">Acessar</a></td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <br />
-        <br />
-        <br />
-        <br />
-
-        <!-- Modal -->
-        <div
-            class="modal fade"
-            id="bannerModal"
-            tabindex="-1"
-            aria-labelledby="bannerModalLabel"
-            aria-hidden="true"
-        >
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="bannerModalLabel">
-                            Banner
-                        </h1>
-                        <button
-                            type="button"
-                            class="btn-close"
-                            data-bs-dismiss="modal"
-                            aria-label="Fechar"
-                        ></button>
-                    </div>
-                    <div class="modal-body">
-                        <form class="px-2" @submit="handlerSubmit">
-                            <div
-                                class="row border p-1 mb-3"
-                                v-if="banner.ARQUIVO"
-                            >
-                                <img :src="banner.ARQUIVO" alt="" />
-                            </div>
-
-                            <div class="row border pb-2 mb-3">
-                                <label for="file">Arquivo</label>
-                                <br />
-                                <input
-                                    type="file"
-                                    id="file"
-                                    @change="previewFile"
-                                    :required="!banner.ARQUIVO ? true : false"
-                                />
-                            </div>
-
-                            <div class="row mb-3" style="gap: 8px">
-                                <div class="col border p-2">
-                                    <label for="dat_inicio">Inicio</label>
-                                    <br />
-                                    <input
-                                        type="date"
-                                        class="w-100"
-                                        id="dat_inicio"
-                                        v-model="banner.DAT_INICIO"
-                                        required
-                                    />
-                                </div>
-                                <div class="col border p-2">
-                                    <label for="dat_fim">Fim</label>
-                                    <br />
-                                    <input
-                                        type="date"
-                                        class="w-100"
-                                        id="dat_fim"
-                                        v-model="banner.DAT_FIM"
-                                    />
-                                </div>
-                                <small
-                                    >&bull; Deixe em branco para tempo
-                                    indeterminado.</small
-                                >
-                            </div>
-
-                            <div class="row mb-3" style="gap: 8px">
-                                <div class="col border pb-2">
-                                    <label for="cod_leilao">Leilão:</label>
-                                    <br />
-                                    <input
-                                        type="number"
-                                        id="cod_leilao"
-                                        list="d_leilao"
-                                        class="w-100"
-                                        v-model="banner.COD_LEILAO"
-                                    />
-                                    <datalist id="d_leilao">
-                                        <option
-                                            v-for="leilao of leiloes"
-                                            :value="leilao.COD_LEILAO"
-                                        >
-                                            {{leilao.DAT_INICIO_LEILAO.split('T')[0].split('-').reverse().join('/')}}
-                                            - {{leilao.DSC_LEILAO}}
-                                        </option>
-                                    </datalist>
-                                </div>
-                                <div class="col border pb-2">
-                                    <label for="cod_grupo">Grupo:</label>
-                                    <br />
-                                    <input
-                                        type="number"
-                                        id="cod_grupo"
-                                        class="w-100"
-                                        v-model="banner.COD_GRUPO"
-                                    />
-                                </div>
-                                <div class="col border pb-2">
-                                    <label for="cod_lote">Lote:</label>
-                                    <br />
-                                    <input
-                                        type="number"
-                                        id="cod_lote"
-                                        class="w-100"
-                                        v-model="banner.COD_LOTE"
-                                    />
-                                </div>
-                            </div>
-
-                            <div class="row mb-3" style="gap: 8px">
-                                <div class="col border pb-2">
-                                    <label for="tpo_banner">Tipo:</label>
-                                    <br />
-                                    <select
-                                        id="tpo_banner"
-                                        class="w-100"
-                                        v-model="banner.TPO_BANNER"
-                                        required
-                                    >
-                                        <option value="0">Destaque</option>
-                                        <option value="1" selected>
-                                            Leilão
-                                        </option>
-                                        <option value="2">Outros</option>
-                                    </select>
-                                </div>
-                            </div>
-
-                            <div class="row mb-3" style="gap: 8px">
-                                <div class="col border pb-2">
-                                    <label for="sts_banner">Status:</label>
-                                    <br />
-                                    <select
-                                        id="sts_banner"
-                                        class="w-100"
-                                        v-model="banner.STS_BANNER"
-                                        required
-                                    >
-                                        <option value="1" selected>
-                                            Ativo
-                                        </option>
-                                        <option value="0">Inativo</option>
-                                    </select>
-                                </div>
-                            </div>
-
-                            <div class="row mb-3" style="gap: 8px">
-                                <input
-                                    type="submit"
-                                    class="btn btn-primary btn-block btn-lg"
-                                    value="Enviar"
-                                />
-                            </div>
-                        </form>
+                <div class="col border rounded p-2">
+                    <h5>Projetos - Fixados</h5>
+                    <div class="table-responsive">
+                        <table class="table table-striped border">
+                            <thead>
+                                <tr>
+                                    <th scope="col">#</th>
+                                    <th scope="col">Nome</th>
+                                    <th scope="col">Tipo</th>
+                                    <th scope="col"></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr v-for="project of projects">
+                                    <th scope="row">{{project.id}}</th>
+                                    <td>{{project.name}}</td>
+                                    <td>{{project.type}}</td>
+                                    <td><a :href="'/projects/i?id='+project.id">Acessar</a></td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
