--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Codlinx - Admin</title>
+        <title>Codlinx - Login</title>
 
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -18,7 +18,7 @@
         <nav class="navbar bg-light">
             <div class="container">
                 <a class="navbar-brand" href="">
-                    <img src="./assets/img/logo_cabecalho.png" alt="" width="60" height="48" />
+                    <img src="./assets/img/logo_cabecalho.png" alt="Codlinx" width="40" height="40" />
                 </a>
             </div>
         </nav>
