--- a/src/public/projects/i.html
+++ b/src/public/projects/i.html
@@ -56,9 +56,14 @@
 
             <form>
                 <div class="row">
-                    <div class="mb-3 col">
+                    <div class="mb-3 col-lg">
                         <label for="exampleInputEmail1" class="form-label">Nome</label>
                         <input type="text" class="form-control" v-model="name" />
+                    </div>
+
+                    <div class="mb-3 col-lg">
+                        <label for="exampleInputEmail1" class="form-label">URL</label>
+                        <input type="text" class="form-control" v-model="url" />
                     </div>
                 </div>
 
