feat (ui): Obter todos os dados iniciais

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -35,7 +35,7 @@
                         <input type="password" class="form-control" id="inputPassword" v-model="password" />
                     </div>
 
-                    <button type="submit" class="btn btn-primary">Entrar</button>
+                    <button type="submit" class="btn btn-dark">Entrar</button>
                 </form>
             </div>
         </div>
