--- a/src/public/service_orders/i.html
+++ b/src/public/service_orders/i.html
@@ -52,14 +52,7 @@
 
             <hr />
 
-            <h5>Os - #{{id}}</h5>
-            <h6 v-if="Protocol">
-                Protocolo -
-                <a :href="'../protocols/i?id='+Protocol.id">#{{Protocol.id}}</a>
-                ({{Protocol.status}})
-            </h6>
-
-            <br />
+            <h5>Os - #{{id}} | {{moment(createdAt).format('DD/MM/YYYY HH:mm')}}</h5>
 
             <form>
                 <div class="row">
@@ -93,11 +86,135 @@
                 </div>
 
                 <button type="submit" class="btn btn-dark">Enviar</button>
+
+                <hr />
             </form>
+
+            <section id="protocol" v-if="Protocol">
+                <h5>Protocolo - #{{Protocol.id}}</h5>
+
+                <div class="row">
+                    <div class="col-lg">
+                        <form>
+                            <div class="row">
+                                <div class="mb-3 col-lg">
+                                    <label for="protocolStatus" class="form-label">Status</label>
+                                    <select class="form-select" v-model="Protocol.status" id="protocolStatus">
+                                        <option disabled value="">Selecione uma opção</option>
+                                        <option value="Em aberto">Em aberto</option>
+                                        <option value="Fechado">Fechado</option>
+                                    </select>
+                                </div>
+                            </div>
+
+                            <button type="submit" class="btn btn-dark">Enviar</button>
+                        </form>
+                    </div>
+                    <div class="col-lg mt-2 border rounded p-2">
+                        <ul>
+                            <li>
+                                <span
+                                    >Total: {{(Protocol.Protocol_registers.reduce((sum, v) => sum + v.value,
+                                    0)).toLocaleString('pt-br',{style: 'currency', currency: 'BRL'})}}
+                                </span>
+                            </li>
+                            <li>
+                                <span
+                                    >Serviço: {{Protocol?.Protocol_registers?.reduce((sum, v) => (v.type == 'Serviço' ?
+                                    sum + v.value : sum), 0).toLocaleString('pt-br',{style: 'currency', currency:
+                                    'BRL'})}}
+                                </span>
+                            </li>
+                            <li>
+                                <span
+                                    >Despesas: {{Protocol?.Protocol_registers?.reduce((sum, v) => (v.type == 'Despesa' ?
+                                    sum + v.value : sum), 0).toLocaleString('pt-br',{style: 'currency', currency:
+                                    'BRL'})}}
+                                </span>
+                            </li>
+                            <li>
+                                <span
+                                    >Valor recebido: {{Protocol?.Receipts?.reduce((sum, v) => (sum + v.value),
+                                    0).toLocaleString('pt-br',{style: 'currency', currency: 'BRL'})}}
+                                </span>
+                            </li>
+                            <li>
+                                <span
+                                    >Valor a receber: {{(Protocol.Protocol_registers.reduce((sum, v) => (sum + v.value),
+                                    0) - Protocol?.Receipts?.reduce((sum, v) => (sum + v.value),
+                                    0)).toLocaleString('pt-br',{style: 'currency', currency: 'BRL'})}}
+                                </span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <hr />
+
+                <div class="row" style="gap: 10px">
+                    <div class="col border rounded p-2">
+                        <h5>Registros</h5>
+                        <div class="table-responsive">
+                            <table class="table table-striped border">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">#</th>
+                                        <th scope="col">Descrição</th>
+                                        <th scope="col">Valor</th>
+                                        <th scope="col">Tipo</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr v-for="protocol_register of Protocol.Protocol_registers">
+                                        <th scope="row">{{protocol_register.id}}</th>
+                                        <td>{{protocol_register.description}}</td>
+                                        <td>
+                                            {{protocol_register.value.toLocaleString('pt-br',{style: 'currency',
+                                            currency: 'BRL'})}}
+                                        </td>
+                                        <td>{{protocol_register.type}}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="col border rounded p-2">
+                        <h5>Recibos</h5>
+                        <div class="table-responsive">
+                            <table class="table table-striped border">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">#</th>
+                                        <th scope="col">Valor</th>
+                                        <th scope="col">Método</th>
+                                        <th scope="col">Observação</th>
+                                        <th scope="col">Data</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr v-for="receipt of Protocol.Receipts">
+                                        <th scope="row">{{receipt.id}}</th>
+                                        <td>
+                                            {{receipt.value.toLocaleString('pt-br',{style: 'currency', currency:
+                                            'BRL'})}}
+                                        </td>
+                                        <td>{{receipt.method}}</td>
+                                        <td>{{receipt.note}}</td>
+                                        <td>{{moment(receipt.createdAt).format('DD/MM/YYYY HH:mm')}}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <br />
         </div>
 
         <script src="../assets/js/axios.min.js"></script>
         <script src="../assets/js/vue.min.js"></script>
+        <script src="../assets/js/moment.min.js"></script>
         <script src="../assets/js/service_orders/i.js"></script>
     </body>
 </html>
