feat (clients): Adicionar cliente

--- a/src/public/clients/i.html
+++ b/src/public/clients/i.html
@@ -54,7 +54,7 @@
 
             <h5>Cliente - #{{id}}</h5>
 
-            <form>
+            <form v-on:submit="handlerSubmit">
                 <div class="row">
                     <div class="mb-3 col">
                         <label for="exampleInputEmail1" class="form-label">Nome</label>
