--- a/src/public/clients/index.html
+++ b/src/public/clients/index.html
@@ -55,6 +55,8 @@
             <div class="d-flex flex-wrap justify-content-between">
                 <div class="w-80">
                     <h5>Clientes</h5>
+                    <hr />
+                    <a href="../clients/i.html">Novo cliente</a>
                 </div>
                 <div class="w-15">
                     <input
