--- a/src/public/service_orders/i.html
+++ b/src/public/service_orders/i.html
@@ -91,7 +91,7 @@
             </form>
 
             <section id="protocol" v-if="Protocol">
-                <h5>Protocolo - #{{Protocol.id}}</h5>
+                <h5>Protocolo</h5>
 
                 <div class="row">
                     <div class="col-lg">
