--- a/src/public/service_orders/index.html
+++ b/src/public/service_orders/index.html
@@ -74,7 +74,7 @@
                             <th scope="col">#</th>
                             <th scope="col">Assunto</th>
                             <th scope="col">Status</th>
-                            <th scope="col"></th>
+                            <th scope="col">Abrir</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -82,7 +82,11 @@
                             <th scope="row">{{service_order.id}}</th>
                             <td>{{service_order.subject}}</td>
                             <td>{{service_order.status}}</td>
-                            <td><a :href="'../service_orders/i?id='+service_order.id">Acessar</a></td>
+                            <td>
+                                <a :href="'../service_orders/i?id='+service_order.id"
+                                    ><i class="fa-solid fa-arrow-right"></i
+                                ></a>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
