--- a/src/public/projects/i.html
+++ b/src/public/projects/i.html
@@ -27,6 +27,8 @@
             referrerpolicy="no-referrer"
         />
 
+        <script src="../assets/js/jquery-3.6.1.min.js"></script>
+
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
             integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
@@ -52,7 +54,10 @@
 
             <hr />
 
-            <h5>Projeto - #{{id}}</h5>
+            <div class="d-flex justify-content-between">
+                <h5>Projeto #{{id}}</h5>
+                <h6>Cliente <a :href="'../clients/i?id='+ClientId">#{{ClientId}}</a></h6>
+            </div>
 
             <form>
                 <div class="row">
@@ -62,7 +67,8 @@
                     </div>
 
                     <div class="mb-3 col-lg">
-                        <label for="url" class="form-label">URL</label>
+                        <label for="url" class="form-label">URL</label> &bull;
+                        <a :href="url" target="_blank"><i class="fa-solid fa-link"></i></a>
                         <input type="text" class="form-control" v-model="url" id="url" />
                     </div>
 
@@ -87,7 +93,12 @@
 
             <div class="row" style="gap: 10px">
                 <div class="col border rounded p-2">
-                    <h5>Os</h5>
+                    <div class="d-flex justify-content-between mb-2">
+                        <h5>Os</h5>
+                        <button class="btn" v-on:click="handlerNewOs">
+                            <i class="fa-solid fa-plus"></i> Adicionar Os
+                        </button>
+                    </div>
                     <div class="table-responsive">
                         <table class="table table-striped border">
                             <thead>
@@ -95,7 +106,7 @@
                                     <th scope="col">#</th>
                                     <th scope="col">Assunto</th>
                                     <th scope="col">Status</th>
-                                    <th scope="col"></th>
+                                    <th scope="col">Abrir</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -103,14 +114,23 @@
                                     <th scope="row">{{service_order.id}}</th>
                                     <td>{{service_order.subject}}</td>
                                     <td>{{service_order.status}}</td>
-                                    <td><a :href="'/service_orders/i?id='+service_order.id">Acessar</a></td>
+                                    <td>
+                                        <a :href="'/service_orders/i?id='+service_order.id"
+                                            ><i class="fa-solid fa-arrow-right"></i
+                                        ></a>
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>
                 </div>
                 <div class="col border rounded p-2">
-                    <h5>Subprojetos</h5>
+                    <div class="d-flex justify-content-between mb-2">
+                        <h5>Subprojetos</h5>
+                        <button class="btn" v-on:click="() => {}">
+                            <i class="fa-solid fa-plus"></i> Adicionar subprojeto
+                        </button>
+                    </div>
                     <div class="table-responsive">
                         <table class="table table-striped border">
                             <thead>
@@ -128,6 +148,53 @@
                                 </tr>
                             </tbody>
                         </table>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Modal Os -->
+            <div class="modal fade" id="newOsModal" tabindex="-1" aria-labelledby="osModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="osModalLabel">Os</h1>
+                            <button
+                                type="button"
+                                class="btn-close"
+                                data-bs-dismiss="modal"
+                                aria-label="Fechar"
+                            ></button>
+                        </div>
+                        <div class="modal-body">
+                            <form @submit="handlerNewOsSubmit">
+                                <div class="row mb-3">
+                                    <label class="form-label" for="subject">Assunto</label>
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        id="subject"
+                                        v-model="payloads.service_order.subject"
+                                        required
+                                    />
+                                </div>
+
+                                <div class="row mb-3">
+                                    <label class="form-label" for="description">Descrição</label>
+                                    <textarea
+                                        type="text"
+                                        class="form-control"
+                                        id="description"
+                                        v-model="payloads.service_order.description"
+                                        rows="4"
+                                        required
+                                    ></textarea>
+                                </div>
+
+                                <div class="row mb-3">
+                                    <input type="submit" class="form-control btn btn-dark btn-block" value="Enviar" />
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
