feat (cliente): Padrão

--- a/src/public/clients/i.html
+++ b/src/public/clients/i.html
@@ -54,7 +54,7 @@
 
             <hr />
 
-            <h5>Cliente - #{{id}}</h5>
+            <h5>Cliente #{{id}}</h5>
 
             <form v-on:submit="handlerSubmit">
                 <div class="row">
