feat (os): Controle de Registro e Recibo

--- a/src/public/projects/i.html
+++ b/src/public/projects/i.html
@@ -261,7 +261,7 @@
                                 </div>
 
                                 <div class="row mb-3">
-                                    <label class="form-label" for="type">Tipo:</label>
+                                    <label class="form-label" for="type">Tipo</label>
                                     <select class="form-control" id="type" v-model="payloads.subproject.type" required>
                                         <option disabled value="">Selecione uma opção</option>
                                         <option value="Front-End">Front-End</option>
