--- a/src/public/clients/i.html
+++ b/src/public/clients/i.html
@@ -192,7 +192,7 @@
                                 </div>
 
                                 <div class="row mb-3">
-                                    <label class="form-label" for="type">Tipo:</label>
+                                    <label class="form-label" for="type">Tipo</label>
                                     <select class="form-control" id="type" v-model="payloads.project.type" required>
                                         <option disabled value="">Selecione uma opção</option>
                                         <option value="API">API</option>
